[tool.poetry]
name = "d-j-library"
version = "0.2.1"
description = ""
authors = ["Mahmuda <bal.mahmuda@gmail.com>"]
readme = "README.md"
packages = [
    { include = "d_j_library" },
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
